# falcon-exchange

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: bench_throughput.cpp
docs/: architecture.md  matching_rules.md
src/: event_queue.hpp  main.cpp  market_data_publisher.hpp  matching_engine.hpp  order.hpp  order_book.hpp  price_level.hpp
tests/: test_matching_engine.cpp  test_order_book.cpp
